--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "keepkey-firmware"]
 	path = keepkey-firmware
 	url = https://github.com/keepkey/keepkey-firmware.git
+[submodule "keystone3-firmware"]
+	path = keystone3-firmware
+	url = https://github.com/KeystoneHQ/keystone3-firmware.git
