--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "keystone3-firmware"]
 	path = keystone3-firmware
 	url = https://github.com/KeystoneHQ/keystone3-firmware.git
+[submodule "onekey-firmware"]
+	path = onekey-firmware
+	url = https://github.com/OneKeyHQ/firmware.git
